--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Gautam Poddar
+logo: /assets/img/mydp.jpg
+description: I am a Data Science Enthusiast
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
