--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,20 @@
-title: Gautam Poddar
-logo: /assets/img/mydp.jpg
-description: I am a Data Science Enthusiast
-show_downloads: true
-google_analytics:
+title: <p align="center"> Gautam Poddar </p>
+logo: /assets/img/logo.png
+
+description:
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/gautampoddar18/">LinkedIn</a> |
+  <a href="https://github.com/GautamPoddar18">GitHub</a>
+  
+  <br>   
+  I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
+  Also handing the Big Data from real-time Ad call data.
+  Worked with IBM Research at Big Data Analytics team.
+  Working in AdTech domain for 3 years.
+  <br>
+  </p>
+
+
+
 theme: jekyll-theme-minimal
