--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: <p align="center"> Gautam Poddar </p>
-logo: /assets/img/logo.png
+logo: /assets/img/mydp.jpg
 
 description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/gautampoddar18/">LinkedIn</a> |
+  <a href="https://www.linkedin.com/in/GautamPoddar18/">LinkedIn</a> |
   <a href="https://github.com/GautamPoddar18">GitHub</a>
   
   <br>   
